<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:stretchColumns="*" android:id="@+id/rootTableLayout">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="10">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/calculatorOutput"
                    android:gravity="center_vertical|end"
                    android:layout_margin="10sp"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:singleLine="true" android:ellipsize="start"
                    android:layout_span="4"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="10">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/calculatorInput"
                    android:layout_margin="10sp" android:gravity="center_vertical|end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:fontFamily="@font/press_start_2p" android:layout_span="4"
                    android:textSize="18sp" android:singleLine="true" android:ellipsize="start"
            />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="10">
            <Button
                    android:text="@string/buttonNumeric1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonNumeric1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonNumeric2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonNumeric2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonNumeric3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonNumeric3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonAddition"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonAddition"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="10">
            <Button
                    android:text="@string/buttonNumeric4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonNumeric4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonNumeric5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonNumeric5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonNumeric6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonNumeric6"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonSubtraction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonSubtraction"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="10">
            <Button
                    android:text="@string/buttonNumeric7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonNumeric7"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonNumeric8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonNumeric8"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonNumeric9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonNumeric9"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonMultiplication"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonMultiplication"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="10">
            <Button
                    android:text="@string/buttonDot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonDot"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonNumeric0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonZero"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonRoot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonRoot"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonDivision"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonDivision"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
        </TableRow>
        <TableRow>
            <Button
                    android:text="@string/buttonClear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonClear"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonPercent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonPercent"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            <Button
                    android:text="@string/buttonEquals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/buttonEquals"
                    style="?android:attr/buttonBarButtonStyle"
                    android:fontFamily="@font/press_start_2p" android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:layout_span="2"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>